Fix spacing on file attachment control links
git-svn-id: file:///Users/gauthierm/svnrepo/public/blorg/trunk@32215 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/admin/styles/blorg-post-edit-page.css
+++ b/www/admin/styles/blorg-post-edit-page.css
@@ -111,8 +111,8 @@ img.blorg-file-icon {
 	white-space: nowrap;
 }
 
-.blorg-file-controls a {
-	margin-left: 0.5em;
+.blorg-file-attach-status {
+	margin-right: 0.5em;
 }
 
 .blorg-file-controls a:link,
